# room-segmentation

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  package.xml
.github/workflows/: build.yaml
action/: MapSegmentation.action
launch/: map_to_room_seg_client.launch
msg/: RoomInformation.msg  RoomSequence.msg
scripts/: map_to_room_seg_client.py
srv/: ExtractAreaMapFromLabeledMap.srv
